# resume-forge-mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_STATUS.md  LICENSE  README.md  pyproject.toml
docs/: CURRENT_STATUS.md  DEPLOYMENT.md  PROJECT.md  PUBLISH.md  TROUBLESHOOTING.md
src/latex_resume_mcp/: __init__.py  __main__.py  server.py
src/latex_resume_mcp/compiler/: latex.py  preview.py
src/latex_resume_mcp/integrations/: dev_journal.py
src/latex_resume_mcp/intelligence/: __init__.py  analyzer.py  knowledge.py  tailoring.py
src/latex_resume_mcp/models/: __init__.py  analysis.py  resume.py
src/latex_resume_mcp/storage/: resume_store.py  tex_import.py
src/latex_resume_mcp/templates/: engine.py  jake_resume.tex.j2
src/resume_forge_mcp/: __init__.py  __main__.py  overleaf.py  server.py
src/resume_forge_mcp/compiler/: latex.py  preview.py
src/resume_forge_mcp/integrations/: __init__.py
src/resume_forge_mcp/intelligence/: __init__.py  analyzer.py  tailoring.py
src/resume_forge_mcp/models/: resume.py
src/resume_forge_mcp/storage/: docx_import.py  pdf_import.py  resume_store.py  tex_import.py
src/resume_forge_mcp/templates/: classic.tex.j2  engine.py  minimal.tex.j2  modern.tex.j2
src/resume_forge_mcp/templates/overleaf/: harshibars-resume.tex
tests/: conftest.py
tests/integration/: test_tools.py
tests/unit/: test_analyzer.py  test_compiler.py  test_models.py  test_storage.py  test_tailoring.py  test_template.py
